# md-sign

./: .gitignore  pyproject.toml
src/md_sign/: main.py
