[tool.poetry]
name = "md-sign"
version = "0.1.0"
description = "Script to sign metadata"
authors = ["Ivan Kanakarakis <ivan.kanak@gmail.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.7"
signxml = "^2.9.0"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"

[tool.poetry.scripts]
md-sign = "md_sign.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
